--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,40 @@
+/* Animations */
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+@keyframes moveInTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-5rem); }
+  70% {
+    transform: translateY(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
-/* Colors used:
-color: #3F1D0B; brown
-color: #13133f; navy-blue */
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(5rem); }
+  70% {
+    transform: translateY(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
-/* for all the elements */
-*,
-*::after,
-*::before{
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+@keyframes zoomIn {
+  0% {
+    transform: scale(0.4); }
+  75% {
+    transform: scale(1.1); }
+  100% {
+    transform: scale(1); } }
 
-html{
-  /* 62.5% of default 16px = 10px to make rem calculations simple*/
-  font-size: 62.5%;
-}
+@keyframes flyTopRight {
+  0% {
+    opacity: 1;
+    transform: translateX(0) translateY(0) scale(1); }
+  100% {
+    opacity: 0;
+    transform: translateX(40rem) translateY(-40rem) scale(5); } }
 
 body {
   font-family: "Acme", sans-serif;
@@ -24,201 +42,111 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: #777;
-  padding: 3rem;
-  box-sizing: border-box;
-}
+  padding: 3rem; }
 
-.header {
-  height: 95vh;
-  background-image: linear-gradient(
-      to right top,
-      rgba(193, 207, 252, 0.8),
-      hsla(229, 46%, 48%, 0.8)
-    ),
-    url("../img/header-background.jpg");
-  background-size: cover;
-  background-position: center;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 75vh);
-  position: relative;
-}
-
-.header__logo-box{
-    position: absolute;
-    top: 3rem;
-    left: 3rem;
-    
-}
-
-.header__logo{
-    height: 5rem;
-    transition: all .5s;
-}
-
-.header__logo:hover{
-  transform: scale(1.3);
-  cursor: pointer;
-}
-
-.header__text-box{
-    position: absolute;
-    top:40%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-
-.heading-primary{
-    color: #13133f;
-    text-transform: uppercase;
-    margin-bottom: 6rem;
-
-    /* to avoid shakiness in animation */
-    backface-visibility: hidden; 
-}
-
-.heading-primary--main{
+.heading-primary {
+  color: #13133f;
+  text-transform: uppercase;
+  margin-bottom: 6rem;
+  /* to avoid shakiness in animation */
+  backface-visibility: hidden; }
+  .heading-primary--main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation-name: moveInTop;
     animation-duration: 2s;
-    animation-timing-function: ease-out;
-}
-
-.heading-primary--sub{
+    animation-timing-function: ease-out; }
+  .heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 400;
     letter-spacing: 1.43rem;
-    animation: zoomIn 2s ease-out;
-}
+    animation: zoomIn 2s ease-out; }
 
-
-
-.fa-dove{
-  color: #3F1D0B;
+.fa-dove {
+  color: #3f1d0b;
   /* animation: flyTopRight 3s ease-out;
-  animation-fill-mode: forwards; */
-}
+    animation-fill-mode: forwards; */ }
 
-.btn:link,
-.btn:visited{
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  /* 62.5% of default 16px = 10px to make 1rem calculations simple*/
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box; }
+
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1rem 5rem;
-  display:inline-block;
+  display: inline-block;
   border-radius: 10rem;
-  transition:all 0.2s;
+  transition: all 0.2s;
   position: relative;
-  font-size: 1.6rem;
-}
+  font-size: 1.6rem; }
 
-.btn:hover{
+.btn:hover {
   transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 1.5rem rgba(0,0,0,0.5);
-}
+  box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.5); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.8);
+    opacity: 0; }
 
-.btn:active{
+.btn:active {
   transform: scale(0.95);
-  box-shadow: 0 .5rem .8rem rgba(0,0,0,0.2);
-}
+  box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2); }
 
-/* .btn:active .fa-dove{
-  animation: flyTopRight 3s ease-out;
-  animation-fill-mode: forwards;
-} */
+.btn--white {
+  background-color: #ffffff;
+  color: #13133f; }
+  .btn--white::after {
+    background-color: #ffffff; }
 
-.btn--white{
-  background-color: white;
-  color: #13133f;
-}
-
-.btn::after{
+.btn::after {
   content: "";
   display: inline-block;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   border-radius: 10rem;
   position: absolute;
-  top:0;
-  left:0;
-  z-index:-1;
-  transition: all 0.4s;
-}
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s; }
 
-.btn--white::after{
-  background-color: white;
-}
-
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.8);
-    opacity:0;
-}
-
-/* Animation classes */
-
-.btn--animated{
+.btn--animated {
   animation: moveInBottom 2s ease-out;
-  /* animation-fill-mode: backwards; */
-}
+  animation-fill-mode: backwards; }
 
-/* Animations */
-
-@keyframes moveInTop {
-  0%{
-    opacity: 0;
-    transform: translateY(-5rem);
-  }
-
-  70%{
-    transform: translateY(1rem);
-  }
-
-  100%{
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0%{
-    opacity: 0;
-    transform: translateY(5rem);
-  }
-
-  70%{
-    transform: translateY(-1rem);
-  }
-
-  100%{
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes zoomIn{
-  0%{
-    transform: scale(0.4);
-  }
-
-  75%{
-    transform: scale(1.1);
-  }
-
-  100%{
-    transform: scale(1);
-  }
-}
-
-@keyframes flyTopRight{
-  0%{
-    opacity: 1;
-    transform: translateX(0) translateY(0) scale(1);
-  }
-
-  100%{
-    opacity: 0;
-    transform: translateX(40rem) translateY(-40rem) scale(5);
-  }
-}
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right top, rgba(193, 207, 252, 0.8), rgba(66, 87, 179, 0.8)), url("../img/header-background.jpg");
+  background-size: cover;
+  background-position: center;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 75vh);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 3rem;
+    left: 3rem; }
+  .header__logo {
+    height: 5rem;
+    transition: all 0.5s; }
+  .header__logo:hover {
+    transform: scale(1.3);
+    cursor: pointer; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
