finished section-about

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,20 @@
+//Colors
+
 $color-primary-light: #c1cffc;
 $color-primary: #4257b3;
 $color-primary-dark: #13133f;
+
+$color-grey-light: #f5efef;
 $color-grey: #777;
 $color-brown: #3f1d0b;
 $color-black: #000000;
 $color-white: #ffffff;
+
+//Grid
+
+$grid-width: 114rem;
+$gutter-vertical: 7rem;
+$gutter-horizontal: 5rem;
+
+//Font size
+$default-font-size: 1.6rem;
