--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* Animations */
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 @keyframes moveInTop {
   0% {
@@ -36,6 +37,14 @@
     opacity: 0;
     transform: translateX(40rem) translateY(-40rem) scale(5); } }
 
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-5rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
 body {
   font-family: "Acme", sans-serif;
   font-weight: 400;
@@ -53,7 +62,7 @@ body {
   .heading-primary--main {
     display: block;
     font-size: 6rem;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 3.5rem;
     animation-name: moveInTop;
     animation-duration: 2s;
@@ -69,6 +78,61 @@ body {
   color: #3f1d0b;
   /* animation: flyTopRight 3s ease-out;
     animation-fill-mode: forwards; */ }
+
+.section-about {
+  font-family: 'Quicksand', sans-serif; }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-image: linear-gradient(to left, #c1cffc, #13133f);
+  display: inline-block;
+  background-clip: text;
+  -webkit-background-clip: text;
+  letter-spacing: 0.2rem;
+  color: transparent;
+  transition: all 0.2s;
+  position: relative; }
+  .heading-secondary:hover {
+    transform: skewY(0) skewX(-15deg);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
+    border: 0.5rem solid #4257b3;
+    padding: 1rem;
+    border-radius: 1rem; }
+    .heading-secondary:hover::after {
+      content: "";
+      display: inline-block;
+      width: 5rem;
+      height: 5rem;
+      background-image: url("/img/tiger-blue.png");
+      background-size: cover;
+      position: absolute;
+      top: 1.5rem;
+      right: -5rem;
+      animation: fadeInRight .5s ease-out; }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700; }
+
+.paragraph {
+  font-size: 1.6rem;
+  font-weight: 100; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-large {
+  margin-bottom: 8rem; }
 
 *,
 *::after,
@@ -127,6 +191,58 @@ body {
   animation: moveInBottom 2s ease-out;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #13133f;
+  letter-spacing: .2rem;
+  text-decoration: none;
+  border: 2px solid #13133f;
+  border-radius: .5rem;
+  display: inline-block;
+  padding: 1rem;
+  transition: all .2s; }
+
+.btn-text:hover {
+  color: #ffffff;
+  background-color: #13133f;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.5rem); }
+
+.btn-text:active {
+  color: #ffffff;
+  background-color: #13133f;
+  box-shadow: 0 -0.5rem 1rem rgba(0, 0, 0, 0.3);
+  transform: translateY(0); }
+
+.composition {
+  position: relative;
+  z-index: 1; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0.5rem 1rem 3rem rgba(0, 0, 0, 0.5);
+    transition: all .2s;
+    position: absolute; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -3rem;
+      z-index: 3; }
+    .composition__photo--p2 {
+      left: 20%;
+      top: 10rem;
+      z-index: 4; }
+    .composition__photo--p3 {
+      right: 0;
+      top: 0;
+      z-index: 2; }
+    .composition__photo:hover {
+      border: 1rem solid #4257b3;
+      padding: 1rem;
+      transform: scale(1.3) translateY(-1rem);
+      box-shadow: 1rem 1.5rem 3rem rgba(0, 0, 0, 0.5);
+      z-index: 10; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right top, rgba(193, 207, 252, 0.8), rgba(66, 87, 179, 0.8)), url("../img/header-background.jpg");
@@ -150,3 +266,34 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 7rem; }
+  .row::after {
+    content: '';
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 5rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 5rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 5rem * 2) / 3); }
+  .row .col-2-of-3 {
+    width: calc( 2 * ((100% - 5rem * 2) / 3) + 5rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 5rem * 3) / 4); }
+  .row .col-2-of-4 {
+    width: calc( 2 * ((100% - 5rem * 3) / 4) + 5rem); }
+  .row .col-3-of-4 {
+    width: calc( 3 * ((100% - 5rem * 3) / 4) + (2 * 5rem)); }
+
+.section-about {
+  background-color: #f5efef;
+  padding: 25rem 0;
+  margin-top: -20vh; }
