--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -18,7 +18,7 @@ body {
   &--main {
     display: block;
     font-size: 6rem;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 3.5rem;
     animation-name: moveInTop;
     animation-duration: 2s;
@@ -38,4 +38,62 @@ body {
   color: $color-brown;
   /* animation: flyTopRight 3s ease-out;
     animation-fill-mode: forwards; */
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+.section-about{
+  font-family: 'Quicksand', sans-serif;
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight:500;
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    to left,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  display: inline-block;
+  background-clip: text;
+  -webkit-background-clip: text;
+  letter-spacing: 0.2rem;
+  color: transparent;
+  transition: all 0.2s;
+  position: relative;
+
+  &:hover {
+    transform: skewY(0) skewX(-15deg);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+    border: 0.5rem solid $color-primary;
+    padding: 1rem;
+    border-radius: 1rem;
+
+    &::after {
+      content: "";
+      display: inline-block;
+      width: 5rem;
+      height: 5rem;
+      background-image: url("/img/tiger-blue.png");
+      background-size: cover;
+      position: absolute;
+      top:1.5rem;
+      right:-5rem;
+      animation: fadeInRight .5s ease-out;
+    }
+  }
+}
+
+.heading-tertiary{
+    font-size: $default-font-size;
+    font-weight: 700;
+}
+
+.paragraph{
+    font-size: $default-font-size;
+    font-weight: 100;
+    &:not(:last-child){
+        margin-bottom: 3rem;
+    }
 }
