--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -9,7 +9,7 @@
       border-radius: 10rem;
       transition: all 0.2s;
       position: relative;
-      font-size: 1.6rem;
+      font-size: $default-font-size;
     }
   
     &:hover {
@@ -50,6 +50,37 @@
     &--animated {
       animation: moveInBottom 2s ease-out;
       animation-fill-mode: backwards;
+    }
+  }
+
+  .btn-text{
+
+    &:link,
+    &:visited{
+        font-size: $default-font-size;
+        color: $color-primary-dark;
+        letter-spacing: .2rem;
+        text-decoration:none;
+        border: 2px solid $color-primary-dark;
+        border-radius: .5rem;
+        display: inline-block;
+        padding: 1rem;
+        transition: all .2s;
+        
+    }
+
+    &:hover{
+        color: $color-white;
+        background-color: $color-primary-dark;
+        box-shadow: .5rem .5rem .5rem rgba($color-black, .3);
+        transform: translateY(-.5rem);
+    }
+
+    &:active{
+        color: $color-white;
+        background-color: $color-primary-dark;
+        box-shadow: 0 -.5rem 1rem rgba($color-black, .3);
+        transform: translateY(0);
     }
   }
   
