--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,10 +8,21 @@
 @import 'base/base';
 
 @import 'components/button';
+@import 'components/composition';
 
 @import 'layout/header';
+@import 'layout/grid';
 
 @import 'pages/home';
+
+
+
+
+
+
+
+
+
 
 
 
