--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Animations */
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 @keyframes moveInTop {
   0% {
     opacity: 0;
@@ -79,9 +79,6 @@ body {
   /* animation: flyTopRight 3s ease-out;
     animation-fill-mode: forwards; */ }
 
-.section-about {
-  font-family: 'Quicksand', sans-serif; }
-
 .heading-secondary {
   font-size: 3.5rem;
   font-weight: 500;
@@ -110,7 +107,7 @@ body {
       position: absolute;
       top: 1.5rem;
       right: -5rem;
-      animation: fadeInRight .5s ease-out; }
+      animation: fadeInRight 0.5s ease-out; }
 
 .heading-tertiary {
   font-size: 1.6rem;
@@ -133,6 +130,12 @@ body {
 
 .u-margin-bottom-large {
   margin-bottom: 8rem; }
+
+.u-margin-top-large {
+  margin-top: 8rem; }
+
+.u-margin-top-xl {
+  margin-top: 12rem; }
 
 *,
 *::after,
@@ -174,6 +177,12 @@ body {
   color: #13133f; }
   .btn--white::after {
     background-color: #ffffff; }
+
+.btn--blue {
+  background-color: #4257b3;
+  color: #ffffff; }
+  .btn--blue::after {
+    background-color: #4257b3; }
 
 .btn::after {
   content: "";
@@ -219,6 +228,7 @@ body {
   z-index: 1; }
   .composition__photo {
     width: 55%;
+    border-radius: 3px;
     box-shadow: 0.5rem 1rem 3rem rgba(0, 0, 0, 0.5);
     transition: all .2s;
     position: absolute; }
@@ -243,12 +253,121 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.9); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 1rem 1rem 4rem rgba(0, 0, 0, 0.4);
+  transition: all .2s; }
+  .feature-box__icon {
+    height: 6rem; }
+  .feature-box:hover {
+    transform: translateY(-2rem) scale(1.07); }
+  .feature-box__text {
+    text-align: justify;
+    text-justify: inter-word; }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  height: 50rem;
+  margin: 0 auto;
+  font-family: "Quicksand", sans-serif;
+  position: relative; }
+  .card__side {
+    height: 50rem;
+    transition: all 1s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: .5rem;
+    overflow: hidden;
+    box-shadow: 1rem 1rem 4rem rgba(0, 0, 0, 0.4); }
+    .card__side--front {
+      background-color: #ffffff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background: linear-gradient(to right bottom, #6dd5ed, #2193b0); }
+      .card__side--back-2 {
+        background: linear-gradient(to right bottom, #e6cd89, #bb6b40); }
+      .card__side--back-3 {
+        background: linear-gradient(to right bottom, #86d9ac, #2e818c); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg);
+    z-index: -10; }
+  .card:hover .card__side--back {
+    transform: rotateY(0);
+    z-index: -10; }
+  .card__picture {
+    background-size: cover;
+    height: 20rem;
+    background-blend-mode: hard-light;
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #6dd5ed, #2193b0), url("/img/bird.jpg"); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right bottom, #e6cd89, #bb6b40), url("/img/monkey.jpg"); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right bottom, #86d9ac, #2e818c), url("/img/fish-card.jpg"); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #ffffff;
+    text-align: right;
+    position: absolute;
+    top: 10rem;
+    right: 1rem;
+    width: 50%; }
+  .card__heading-span {
+    padding: .6rem 1rem;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background: linear-gradient(to right bottom, rgba(109, 213, 237, 0.8), rgba(33, 147, 176, 0.8)); }
+    .card__heading-span--2 {
+      background: linear-gradient(to right bottom, rgba(230, 205, 137, 0.8), rgba(187, 107, 64, 0.8)); }
+    .card__heading-span--3 {
+      background: linear-gradient(to right bottom, rgba(134, 217, 172, 0.8), rgba(46, 129, 140, 0.8)); }
+  .card__details {
+    font-size: 1.6rem; }
+    .card__details ul {
+      list-style-type: none;
+      width: 80%;
+      margin: 2rem auto; }
+      .card__details ul li {
+        padding: 1rem;
+        text-align: center; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #f5efef; }
+  .card__price-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 8rem; }
+  .card__price-only {
+    font-size: 1.6rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 5rem;
+    font-weight: 100; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right top, rgba(193, 207, 252, 0.8), rgba(66, 87, 179, 0.8)), url("../img/header-background.jpg");
   background-size: cover;
   background-position: center;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 75vh);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85vh);
   position: relative; }
   .header__logo-box {
     position: absolute;
@@ -296,4 +415,19 @@ body {
 .section-about {
   background-color: #f5efef;
   padding: 25rem 0;
-  margin-top: -20vh; }
+  margin-top: -25vh;
+  font-family: "Quicksand", sans-serif; }
+
+.section-features {
+  padding: 20rem 0;
+  height: 100vh;
+  margin-top: -25vh;
+  background-image: linear-gradient(to right top, rgba(193, 207, 252, 0.8), rgba(66, 87, 179, 0.8)), url("../img/elephant-horizontal.jpg");
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 15vh, 100% 100%, 0 85vh); }
+
+.section-serial-type {
+  background-color: #f5efef;
+  padding: 20rem 0 15rem 0;
+  margin-top: -15vh; }
