--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -11,3 +11,11 @@
 .u-margin-bottom-large{
     margin-bottom: 8rem;
 }
+
+.u-margin-top-large{
+    margin-top: 8rem;
+}
+
+.u-margin-top-xl{
+    margin-top: 12rem;
+}
