--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -33,6 +33,14 @@
         background-color: $color-white;
       }
     }
+
+    &--blue{
+      background-color: $color-primary;
+      color: $color-white;
+      &::after {
+        background-color: $color-primary;
+      }
+    }
   
     &::after {
       content: "";
