--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -6,6 +6,7 @@
 
     &__photo{
         width:55%;
+        border-radius:3px;
         box-shadow: .5rem 1rem 3rem rgba($color-black, 0.5);
         transition: all .2s;
         position: absolute;
