--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,11 +9,33 @@
 
 @import 'components/button';
 @import 'components/composition';
+@import 'components/feature-box';
+@import 'components/card';
 
 @import 'layout/header';
 @import 'layout/grid';
 
 @import 'pages/home';
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
