--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,30 @@
-.section-about{
-    background-color: $color-grey-light;
-    padding: 25rem 0;
-    margin-top: -20vh;
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+
+.section-about {
+  background-color: $color-grey-light;
+  padding: 25rem 0;
+  margin-top: -25vh;
+  font-family: "Quicksand", sans-serif;
+}
+
+.section-features {
+  padding: 20rem 0;
+  height: 100vh;
+  margin-top: -25vh;
+  background-image: linear-gradient(
+      to right top,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary, 0.8)
+    ),
+    url("../img/elephant-horizontal.jpg");
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 15vh, 100% 100%, 0 85vh);
+
+}
+
+.section-serial-type{
+  background-color: $color-grey-light;
+  padding: 20rem 0 15rem 0;
+  margin-top: -15vh;
 }
