--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,12 +12,18 @@ $color-green-dark: #2e818c;
 
 $color-brown-light: #e6cd89;
 $color-brown-dark: #bb6b40;
+$color-brown: #3f1d0b;
 
 $color-grey-light: #f5efef;
 $color-grey: #777;
-$color-brown: #3f1d0b;
+$color-grey-dark: #373943;
+
 $color-black: #000000;
 $color-white: #ffffff;
+
+$color-red: #FF4136;
+
+$color-green:#2ECC40;
 
 //Grid
 
