--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,6 +5,7 @@ body {
   line-height: 1.7;
   color: $color-grey;
   padding: 3rem;
+  cursor: url(https://cur.cursors-4u.net/nature/nat-10/nat1019.cur), auto !important;
 }
 
 .heading-primary {
