--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 
 .btn {
+    &,
     &:link,
     &:visited {
       text-transform: uppercase;
@@ -10,6 +11,9 @@
       transition: all 0.2s;
       position: relative;
       font-size: $default-font-size;
+      border:none;
+      cursor: pointer;
+
     }
   
     &:hover {
@@ -21,7 +25,9 @@
       }
     }
   
-    &:active {
+    &:active,
+    &:focus {
+      outline:none;
       transform: scale(0.95);
       box-shadow: 0 0.5rem 0.8rem rgba($color-black, 0.2);
     }
