--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -49,7 +49,7 @@
       transparent 49.5%,
       rgba($color-white, 0.8) 50%
     ),
-    url("/img/child-deer.jpg");
+    url("../img/child-deer.jpg");
   background-size: 100%;
   background-position: bottom;
   border-radius: 3px;
