--- a/css/style.css
+++ b/css/style.css
@@ -326,11 +326,11 @@ body {
     background-blend-mode: hard-light;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
     .card__picture--1 {
-      background-image: linear-gradient(to right bottom, #6dd5ed, #2193b0), url("/img/bird.jpg"); }
+      background-image: linear-gradient(to right bottom, #6dd5ed, #2193b0), url("../img/bird.jpg"); }
     .card__picture--2 {
-      background-image: linear-gradient(to right bottom, #e6cd89, #bb6b40), url("/img/monkey.jpg"); }
+      background-image: linear-gradient(to right bottom, #e6cd89, #bb6b40), url("../img/monkey.jpg"); }
     .card__picture--3 {
-      background-image: linear-gradient(to right bottom, #86d9ac, #2e818c), url("/img/fish-card.jpg"); }
+      background-image: linear-gradient(to right bottom, #86d9ac, #2e818c), url("../img/fish-card.jpg"); }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -597,7 +597,7 @@ body {
       position: absolute;
       top: -2rem;
       left: 0;
-      background-image: url("/img/grass.png");
+      background-image: url("../img/grass.png");
       background-size: contain;
       background-position: center;
       z-index: 2; }
@@ -609,7 +609,7 @@ body {
       position: absolute;
       top: -8rem;
       left: -50rem;
-      background-image: url("/img/running-tiger.gif");
+      background-image: url("../img/running-tiger.gif");
       background-size: cover;
       background-position: center;
       animation: squirrelMoveRight 13s linear;
@@ -647,7 +647,7 @@ body {
       position: absolute;
       top: -1.5rem;
       left: -80%;
-      background-image: url("/img/river.png");
+      background-image: url("../img/river.png");
       background-size: contain;
       background-position: center;
       z-index: 1; }
@@ -659,7 +659,7 @@ body {
       position: absolute;
       top: -2rem;
       left: 0;
-      background-image: url("/img/grass.png");
+      background-image: url("../img/grass.png");
       background-size: contain;
       background-position: center;
       z-index: 2; }
@@ -693,7 +693,7 @@ body {
   background-image: linear-gradient(to bottom, #c1cffc, #4257b3); }
 
 .contact {
-  background-image: linear-gradient(80deg, transparent 0%, transparent 49.5%, rgba(255, 255, 255, 0.8) 50%), url("/img/child-deer.jpg");
+  background-image: linear-gradient(80deg, transparent 0%, transparent 49.5%, rgba(255, 255, 255, 0.8) 50%), url("../img/child-deer.jpg");
   background-size: 100%;
   background-position: bottom;
   border-radius: 3px;
