--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -34,7 +34,7 @@
             position: absolute;
             top:-2rem;
             left:0;
-            background-image: url('/img/grass.png');
+            background-image: url('../img/grass.png');
             background-size: contain;
             background-position: center;
             z-index: 2;
@@ -48,7 +48,7 @@
             position: absolute;
             top:-8rem;
             left:-50rem;
-            background-image: url('/img/running-tiger.gif');
+            background-image: url('../img/running-tiger.gif');
             background-size: cover;
             background-position: center;
             animation: squirrelMoveRight 13s linear;
@@ -102,7 +102,7 @@
             position: absolute;
             top:-1.5rem;
             left:-80%;
-            background-image: url('/img/river.png');
+            background-image: url('../img/river.png');
             background-size: contain;
             background-position: center;
             z-index: 1;
@@ -116,7 +116,7 @@
             position: absolute;
             top:-2rem;
             left:0;
-            background-image: url('/img/grass.png');
+            background-image: url('../img/grass.png');
             background-size: contain;
             background-position: center;
             z-index: 2;
