--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,12 +14,67 @@
 @import 'components/story';
 @import 'components/bg-video';
 @import 'components/form';
+@import 'components/modal';
 
 @import 'layout/header';
 @import 'layout/grid';
 @import 'layout/footer';
+@import 'layout/_navigation';
 
 @import 'pages/home';
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
